# formicaio

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  formica.Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  windows.Dockerfile
.cargo/: config.toml
.github/workflows/: container_with_native_nodes.yml  container_with_native_nodes_lcd_disabled.yml  feat.yml  main.yml  release_native.yml  windows.yml
deploy/: docker_cmds.md  publish_new_formica.sh
deploy/local/: docker-compose.yml
deploy/local/k8s/: README.md  formicaio-pod.yaml
deploy/local_native/: docker-compose.yml
deploy/umbrelos/: docker-compose.yml  nginx.conf  umbrel-app.yml
examples/: graphql_queries.md
migrations/: 20240826133655_nodes.sql  20241105140555_metrics.sql  20241118175359_node_status.sql  20241119024935_settings.sql  20241122023406_settings.sql  20241127230119_settings.sql  20250116191347_node_ips.sql  20250121021543_nodes.sql  20250206112021_node_id.sql  20250211000000_init.sql  20250227212326_upnp.sql  20250704052804_ip_addr.sql  20250710175654_status_change.sql  20250714233404_data_dir_path.sql  20250730024032_remove_home_network.sql  20250806132927_settings_change.sql  20250917133657_reachability_check.sql  20260114153853_interface_settings.sql  20260118202106_disks_usage_freq_setting.sql  20260217015756_earnings.sql  20260219120000_agent.sql  20260223123000_rewards_monitoring_toggle.sql  20260321203201_saorsa_node_schema.sql  20260322000000_init.sql  20260514000000_add_use_system_metrics.sql  20260515000000_add_node_bin_download_url.sql
public/: metamask.js
src/: about.rs  add_node.rs  alerts.rs  app.rs  app_context.rs  bg_helpers.rs  bg_tasks.rs  chart_view.rs  cli_cmds.rs  db_client.rs  docker_client.rs  docker_msgs.rs  error_template.rs  helpers.rs  icons.rs  lcd.rs  lib.rs  main.rs  metadata_db.rs  metrics.rs  metrics_client.rs  navbar.rs  node_actions.rs  node_instance.rs  node_manager.rs  node_rpc_client.rs  node_status.rs  nodes_list_view.rs  pagination.rs  portainer_client.rs  portainer_msgs.rs  server_api.rs  server_api_docker.rs  server_api_native.rs  server_api_types.rs  settings.rs  sort_nodes.rs  stats.rs  terminal.rs  tools.rs
src/bg_tasks/: arbitrum_client.rs  batches.rs  earnings.rs  helpers.rs  lcd.rs  mcp.rs  mcp_tools.rs  metrics_client.rs  mod.rs  tasks.rs  tasks_ctx.rs
src/bg_tasks/agent/: llm_client.rs  mod.rs  tool_executor.rs
src/graphql/: README.md  mod.rs  resolvers.rs  schema.rs
src/node_mgr/: docker.rs  docker_client.rs  docker_msgs.rs  mod.rs  native.rs  native_nodes.rs
src/server_api/: docker.rs  mod.rs  native.rs  types.rs
src/types/: agent.rs  batch.rs  filters.rs  metrics.rs  mod.rs  node_id.rs  node_instance.rs  node_status.rs  settings.rs  sort_nodes.rs  stats.rs
src/views/: about.rs  actions_batch.rs  add_nodes.rs  agent_view.rs  alerts.rs  chart.rs  dashboard.rs  earnings.rs  form_inputs.rs  helpers.rs  icons.rs  logs_viewer.rs  mcp_view.rs  mod.rs  navbar.rs  node_actions.rs  node_instance.rs  nodes_list.rs  notifications.rs  pagination.rs  settings.rs  sidebar.rs  sort_nodes.rs  stats.rs  terminal.rs
style/: tailwind.css
