[package]
name = "formicaio"
version = "0.0.27"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alloy = { version = "0.7", default-features = false, features = ["provider-http","reqwest"] }
alloy-sol-types = { version = "0.8", default-features = false, features = ["json"], optional = true }
alloy-contract = { version = "0.7", default-features = false, optional = true }
apexcharts-rs = { version = "0.1", features = ["leptos"] }
async-stream = { version = "0.3", optional = true }
axum = { version = "0.7", optional = true, features = ["macros","http2"] }
bs58 = { version = "0.5", optional = true }
bytes = "1"
chrono = "0.4"
console_error_panic_hook = "0.1"
eyre = { version = "0.6", optional = true }
futures-util = "0.3"
gloo-timers = { version = "0.3", default-features = false, features = ["futures"] }
gloo-utils = { version = "0.2", default-features = false, features = ["serde"] }
hex = "0.4"
http = "1"
http-body-util = { version = "0.1", optional = true }
hyper = { version = "1.5", features = ["client","http1"], optional = true }
hyper-util = { version = "0.1", optional = true }
i2cdev = { version = "0.6", optional = true }
lcd = { version = "0.4", optional = true }
leptos = { version = "0.7" }
leptos_axum = { version = "0.7", optional = true }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
libp2p-identity = { version = "0.2", features = ["peerid","ed25519"], optional = true }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
semver = { version = "1.0", optional = true }
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["derive","migrate","runtime-tokio","tls-rustls","sqlite"], optional = true }
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"], optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
tower-http = { version = "0.6", default-features = false, features = ["fs"], optional = true }
url = "2"
wasm-bindgen = "=0.2.96"
wasm-bindgen-futures = "0.4"

[features]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:alloy-sol-types",
    "dep:alloy-contract",
    "dep:async-stream",
    "dep:axum",
    "dep:bs58",
    "dep:eyre",
    "dep:http-body-util",
    "dep:hyper",
    "dep:hyper-util",
    "dep:i2cdev",
    "dep:lcd",
    "dep:leptos_axum",
    "dep:libp2p-identity",
    "dep:reqwest",
    "dep:semver",
    "dep:sqlx",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "formicaio"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# The tailwind input file.
#
# Optional, Activates the tailwind build
tailwind-input-file = "style/tailwind.css"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
#style-file = "style/tailwind.css"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
