[package]
name = "formicaio"
version = "0.7.4"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alloy = { version = "1", default-features = false, features = ["reqwest-rustls-tls","provider-http","contract","sol-types","json"], optional = true }
alloy-primitives = { version = "1", features = ["serde"] }
ant-releases = { version = "0.4.0", optional = true }
apexcharts-rs = { version = "0.1", default-features = false, features = ["leptos"] }
async-stream = { version = "0.3", optional = true }
axum = { version = "0.8", optional = true, features = ["macros","http2"] }
bs58 = { version = "0.5", optional = true }
bytes = "1"
chrono = "0.4"
console_error_panic_hook = "0.1"
eyre = { version = "0.6" }
futures-util = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo-timers = { version = "0.3", default-features = false, features = ["futures"] }
gloo-utils = { version = "0.2", default-features = false, features = ["serde"] }
hex = "0.4"
http = "1"
http-body-util = { version = "0.1", optional = true }
hyper = { version = "1.5", features = ["client","http1"], optional = true }
hyper-util = { version = "0.1", optional = true }
i2cdev = { version = "0.6", optional = true }
lcd = { version = "0.4", optional = true }
leptos = { version = "0.8" }
leptos_axum = { version = "0.8", optional = true }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
libp2p-identity = { version = "0.2", features = ["peerid","ed25519"], optional = true }
local-ip-address = { version = "0.6", optional = true }
nom-openmetrics = { version = "0.2.0", optional = true }
prettytable = "0.10.0"
rand = "0.9"
reqwest = { version = "0.13", default-features = false, features = ["rustls","json"], optional = true }
rust-mcp-sdk = { version = "0.8.2", optional = true, default-features = false, features = ["server","macros","streamable-http","hyper-server"] }
async-trait = { version = "0.1.89", optional = true }
semver = { version = "1.0", optional = true }
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
sqlx = { version = "0.8", default-features = false, features = ["derive","migrate","runtime-tokio","tls-rustls","sqlite"], optional = true }
sysinfo = { version = "0.38", default-features = false, features = ["system","disk"], optional = true }
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread","signal"], optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
tower-http = { version = "0.6", default-features = false, features = ["fs"], optional = true }
url = "2"
walkdir = { version = "2.5.0", optional = true }
wasm-bindgen = "=0.2.108"
wasm-bindgen-futures = "0.4"

[features]
# Nodes are launched as native OS processes instead of as Docker containers
native = []
# Some platforms don't support I2C interface.
lcd-disabled = []
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:ant-releases",
    "dep:alloy",
    "dep:async-stream",
    "dep:async-trait",
    "dep:axum",
    "dep:bs58",
    "dep:http-body-util",
    "dep:hyper",
    "dep:hyper-util",
    "dep:i2cdev",
    "dep:lcd",
    "dep:leptos_axum",
    "dep:libp2p-identity",
    "dep:local-ip-address",
    "dep:nom-openmetrics",
    "dep:reqwest",
    "dep:rust-mcp-sdk",
    "dep:semver",
    "dep:sqlx",
    "dep:sysinfo",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:walkdir",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

# Reduce the amount of debug info to avoid OOM whe linking (the default is 2 for dev and test builds)
[profile.dev]
debug = 1

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.cross.build.env]
# Environment variables to be passed through to the cross container.
passthrough = ["LEPTOS_OUTPUT_NAME=formicaio"]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "formicaio"
bin-target = "formicaio"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# The tailwind input file.
#
# Optional, Activates the tailwind build
tailwind-input-file = "style/tailwind.css"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
#style-file = "style/tailwind.css"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:52100) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:52100"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
